# ice_chat

./: .gitignore  CMakeLists.txt  README.md  chat.prop
client/: CMakeLists.txt
client/inc/: characters_not_allowed_exception.hpp  client.hpp
client/src/: client.cpp  main.cpp
common/: CMakeLists.txt
common/inc/: ChatRoomFactoryI.hpp  ChatRoomI.hpp  ChatServerI.hpp  ChatUserI.hpp  ConnectionUtil.h
common/src/: ChatRoomFactoryI.cpp  ChatRoomI.cpp  ChatServerI.cpp  ChatUserI.cpp  ConnectionUtil.cpp
room_factory/: CMakeLists.txt
room_factory/inc/: room_factory.hpp
room_factory/src/: main.cpp  room_factory.cpp
server/: CMakeLists.txt
server/inc/: server.hpp
server/src/: main.cpp  server.cpp
